# config

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  LICENSE  README.md  autobuild.ini  autobuild.py  build_settings.sh  coverage.sh  cppcheck.sh
src/: CMakeLists.txt  config.cpp  config.h  config_section.cpp  config_section.h  config_value.cpp  config_value.h  dummy.cpp  string_helpers.cpp  string_helpers.h
test/: CMakeLists.txt  config_section_test.cpp  config_test.cpp  string_helpers_test.cpp
